--- a/i18n/languages/wc-category-showcase.pot
+++ b/i18n/languages/wc-category-showcase.pot
@@ -1,15 +1,15 @@
-# Copyright (C) 2020 PluginEver
+# Copyright (C) 2021 PluginEver
 # This file is distributed under the GPLv2+.
 msgid ""
 msgstr ""
-"Project-Id-Version: WooCommerce Category Showcase 1.1.3\n"
+"Project-Id-Version: WooCommerce Category Showcase 1.1.6\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/wc-category-showcase\n"
-"POT-Creation-Date: 2020-08-05 10:50:02+00:00\n"
+"POT-Creation-Date: 2021-12-27 10:03:39+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2021-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "X-Generator: grunt-wp-i18n 1.0.3\n"
@@ -145,7 +145,7 @@ msgid "Once Weekly"
 msgstr ""
 
 #: includes/class-insights.php:512
-msgid "I couldn\'t understand how to make it work"
+msgid "I couldn't understand how to make it work"
 msgstr ""
 
 #: includes/class-insights.php:514
@@ -161,7 +161,7 @@ msgid "Which plugin?"
 msgstr ""
 
 #: includes/class-insights.php:524
-msgid "The plugin is great, but I need specific feature that you don\'t support"
+msgid "The plugin is great, but I need specific feature that you don't support"
 msgstr ""
 
 #: includes/class-insights.php:526
@@ -177,11 +177,11 @@ msgid "Could you tell us a bit more whats not working?"
 msgstr ""
 
 #: includes/class-insights.php:536
-msgid "It\'s not what I was looking for"
+msgid "It's not what I was looking for"
 msgstr ""
 
 #: includes/class-insights.php:542
-msgid "The plugin didn\'t work as expected"
+msgid "The plugin didn't work as expected"
 msgstr ""
 
 #: includes/class-insights.php:544
@@ -217,31 +217,6 @@ msgid ""
 "Want to help make <strong>WooCommerce  Category Showcase</strong> even more "
 "awesome? Allow PluginEver to collect non-sensitive diagnostic data and "
 "usage information."
-msgstr ""
-
-#: includes/custom-cp.php:11
-msgctxt "post type general name"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:12
-msgctxt "post type singular name"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:13
-msgctxt "admin menu"
-msgid "WC Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:12
-msgctxt "add new on admin bar"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:15
-msgctxt "book"
-msgid "Add New"
 msgstr ""
 
 #: includes/custom-cp.php:16
@@ -296,7 +271,9 @@ msgstr ""
 
 #: wc-category-showcase.php:191
 msgid ""
-"<strong>WooCommerce Category Showcase</strong> requires <strong>WooCommerce</strong> installed and activated. Please install %s WooCommerce. %s"
+"<strong>WooCommerce Category Showcase</strong> requires "
+"<strong>WooCommerce</strong> installed and activated. Please install %s "
+"WooCommerce. %s"
 msgstr ""
 
 #: wc-category-showcase.php:377
@@ -333,4 +310,29 @@ msgstr ""
 
 #. Author URI of the plugin/theme
 msgid "https://pluginever.com"
+msgstr ""
+
+#: includes/custom-cp.php:11
+msgctxt "post type general name"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:12
+msgctxt "post type singular name"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:13
+msgctxt "admin menu"
+msgid "WC Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:14
+msgctxt "add new on admin bar"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:15
+msgctxt "book"
+msgid "Add New"
 msgstr ""
