--- a/i18n/languages/wc-category-showcase.pot
+++ b/i18n/languages/wc-category-showcase.pot
@@ -1,17 +1,28 @@
-# Copyright (C) 2020 PluginEver
+# Copyright (C) 2022 PluginEver
 # This file is distributed under the GPLv2+.
 msgid ""
 msgstr ""
-"Project-Id-Version: WooCommerce Category Showcase 1.1.3\n"
+"Project-Id-Version: WooCommerce Category Showcase 1.1.4\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/wc-category-showcase\n"
-"POT-Creation-Date: 2020-08-05 10:50:02+00:00\n"
+"POT-Creation-Date: 2022-04-04 08:16:53+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2022-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Country: United States\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: "
+"__;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_"
+"attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c;\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 "X-Generator: grunt-wp-i18n 1.0.3\n"
 
 #: admin/class-admin.php:25
@@ -145,7 +156,7 @@ msgid "Once Weekly"
 msgstr ""
 
 #: includes/class-insights.php:512
-msgid "I couldn\'t understand how to make it work"
+msgid "I couldn't understand how to make it work"
 msgstr ""
 
 #: includes/class-insights.php:514
@@ -161,7 +172,7 @@ msgid "Which plugin?"
 msgstr ""
 
 #: includes/class-insights.php:524
-msgid "The plugin is great, but I need specific feature that you don\'t support"
+msgid "The plugin is great, but I need specific feature that you don't support"
 msgstr ""
 
 #: includes/class-insights.php:526
@@ -177,11 +188,11 @@ msgid "Could you tell us a bit more whats not working?"
 msgstr ""
 
 #: includes/class-insights.php:536
-msgid "It\'s not what I was looking for"
+msgid "It's not what I was looking for"
 msgstr ""
 
 #: includes/class-insights.php:542
-msgid "The plugin didn\'t work as expected"
+msgid "The plugin didn't work as expected"
 msgstr ""
 
 #: includes/class-insights.php:544
@@ -217,31 +228,6 @@ msgid ""
 "Want to help make <strong>WooCommerce  Category Showcase</strong> even more "
 "awesome? Allow PluginEver to collect non-sensitive diagnostic data and "
 "usage information."
-msgstr ""
-
-#: includes/custom-cp.php:11
-msgctxt "post type general name"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:12
-msgctxt "post type singular name"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:13
-msgctxt "admin menu"
-msgid "WC Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:12
-msgctxt "add new on admin bar"
-msgid "WC Category Showcase"
-msgstr ""
-
-#: includes/custom-cp.php:15
-msgctxt "book"
-msgid "Add New"
 msgstr ""
 
 #: includes/custom-cp.php:16
@@ -296,22 +282,24 @@ msgstr ""
 
 #: wc-category-showcase.php:191
 msgid ""
-"<strong>WooCommerce Category Showcase</strong> requires <strong>WooCommerce</strong> installed and activated. Please install %s WooCommerce. %s"
+"<strong>WooCommerce Category Showcase</strong> requires "
+"<strong>WooCommerce</strong> installed and activated. Please install %s "
+"WooCommerce. %s"
 msgstr ""
 
-#: wc-category-showcase.php:377
+#: wc-category-showcase.php:381
 msgid "Upgrade To Pro"
 msgstr ""
 
-#: wc-category-showcase.php:379
+#: wc-category-showcase.php:383
 msgid "View Plugin's Documentation"
 msgstr ""
 
-#: wc-category-showcase.php:379
+#: wc-category-showcase.php:383
 msgid "Documentation"
 msgstr ""
 
-#: wc-category-showcase.php:394 wc-category-showcase.php:404
+#: wc-category-showcase.php:398 wc-category-showcase.php:408
 msgid "Cheatin&#8217; huh?"
 msgstr ""
 
@@ -333,4 +321,29 @@ msgstr ""
 
 #. Author URI of the plugin/theme
 msgid "https://pluginever.com"
+msgstr ""
+
+#: includes/custom-cp.php:11
+msgctxt "post type general name"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:12
+msgctxt "post type singular name"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:13
+msgctxt "admin menu"
+msgid "WC Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:14
+msgctxt "add new on admin bar"
+msgid "WC Category Showcase"
+msgstr ""
+
+#: includes/custom-cp.php:15
+msgctxt "book"
+msgid "Add New"
 msgstr ""
