--- a/i18n/languages/wc-category-showcase.pot
+++ b/i18n/languages/wc-category-showcase.pot
@@ -2,10 +2,10 @@
 # This file is distributed under the GPLv2+.
 msgid ""
 msgstr ""
-"Project-Id-Version: WooCommerce Category Showcase 1.1.8\n"
+"Project-Id-Version: Product Category Showcase for WooCommerce 1.1.9\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/wc-category-showcase\n"
-"POT-Creation-Date: 2022-10-26 09:00:59+00:00\n"
+"POT-Creation-Date: 2022-11-20 09:47:44+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -293,15 +293,15 @@ msgid "Cheatin&#8217; huh?"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WooCommerce Category Showcase"
+msgid "Product Category Showcase for WooCommerce"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://pluginever.com/wc-category-showcase"
+msgid "https://pluginever.com/plugins/woocommerce-category-showcase-pro/"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "WooCommerce extension to showcase categories in a nice slider blocks"
+msgid "WooCommerce extension to showcase categories in interactive slider blocks."
 msgstr ""
 
 #. Author of the plugin/theme
