--- a/i18n/languages/wc-category-showcase.pot
+++ b/i18n/languages/wc-category-showcase.pot
@@ -1,11 +1,11 @@
 # Copyright (C) 2024 PluginEver
-# This file is distributed under the GPL v3 or later.
+# This file is distributed under the GPL v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Product Category Showcase for WooCommerce 2.0.5\n"
+"Project-Id-Version: Product Category Showcase for WooCommerce 2.0.6\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/wc-category-showcase\n"
-"POT-Creation-Date: 2024-10-23 11:33:53+00:00\n"
+"POT-Creation-Date: 2024-10-23 11:50:41+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -134,14 +134,14 @@ msgid ""
 msgstr ""
 
 #: includes/class-promotion.php:72
-msgid "Claim your discount!!"
+msgid "Claim Your Discount!!"
 msgstr ""
 
-#: includes/class-promotion.php:75
-msgid "Never show this again"
+#: includes/class-promotion.php:76
+msgid "View Our Plugins & Offer"
 msgstr ""
 
-#: includes/class-promotion.php:78
+#: includes/class-promotion.php:79
 msgid "Valid until November 10, 2024"
 msgstr ""
 
