--- a/i18n/languages/wc-category-showcase.pot
+++ b/i18n/languages/wc-category-showcase.pot
@@ -2,10 +2,10 @@
 # This file is distributed under the GPL v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Product Category Showcase for WooCommerce 2.0.6\n"
+"Project-Id-Version: Product Category Showcase for WooCommerce 2.0.7\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/wc-category-showcase\n"
-"POT-Creation-Date: 2024-10-23 11:50:41+00:00\n"
+"POT-Creation-Date: 2024-11-27 08:38:47+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -123,14 +123,14 @@ msgid "Upgrade To PRO Now"
 msgstr ""
 
 #: includes/class-promotion.php:52
-msgid "Limited Time Offer! PluginEver Halloween Sale: 30% OFF!!"
+msgid "Black Friday & Cyber Monday: Flat 40% OFF on All Premium Plugins!"
 msgstr ""
 
 #: includes/class-promotion.php:59
 #. translators: 1.Offer Percentage, 2. Coupon Code.
 msgid ""
-"Spectacular Halloween Deal! Get %1$s on all premium plugins with code %2$s. "
-"Don't miss out — this offer vanishes soon! 👻"
+"Boost your WooCommerce store this Black Friday! Get %1$s on all premium "
+"plugins with code %2$s. Don’t miss this limited-time deal!"
 msgstr ""
 
 #: includes/class-promotion.php:72
@@ -142,7 +142,7 @@ msgid "View Our Plugins & Offer"
 msgstr ""
 
 #: includes/class-promotion.php:79
-msgid "Valid until November 10, 2024"
+msgid "Valid until December 07, 2024"
 msgstr ""
 
 #: includes/custom-cp.php:16
