--- a/languages/wc-category-showcase.pot
+++ b/languages/wc-category-showcase.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WC Category Showcase 2.2.1\n"
 "Report-Msgid-Bugs-To: https://pluginever.com/support/\n"
-"POT-Creation-Date: 2025-05-19 06:26:05+00:00\n"
+"POT-Creation-Date: 2025-05-19 06:30:03+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1623,7 +1623,9 @@ msgid "https://pluginever.com/plugins/woocommerce-category-showcase-pro/"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "WooCommerce extension to showcase categories in various styles and layouts."
+msgid ""
+"WooCommerce extension to showcase categories in various styles and layouts "
+"like sliders, blocks, and grids."
 msgstr ""
 
 #. Author of the plugin/theme
