--- a/languages/wc-category-showcase.pot
+++ b/languages/wc-category-showcase.pot
@@ -2,9 +2,10 @@
 # This file is distributed under the GPL v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: WC Category Showcase 2.2.4\n"
-"Report-Msgid-Bugs-To: https://pluginever.com/support/\n"
-"POT-Creation-Date: 2025-08-18 06:36:43+00:00\n"
+"Project-Id-Version: WooCommerce Category Showcase 2.2.4\n"
+"Report-Msgid-Bugs-To: "
+"https://pluginever.com/plugins/woocommerce-category-showcase-pro/\n"
+"POT-Creation-Date: 2025-08-19 09:22:27+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
